--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <header class="menu">
         <!-- Dentro dessa tag estará as marcações do cabeçalho -->
-        <img class="menu-imagem" src="logo.svg" alt="Logo da Comunidade Ballerini">
+        <img class="menu-imagem" src="Imagens/logo.svg" alt="Logo da Comunidade Ballerini">
         <nav class="menu-opções">
             <!-- É um menu de navegação -->
             <a class="menu-opção1">Comunidade Ballerini</a>
@@ -39,7 +39,7 @@
                 <h2 class="principal-seção1-subtítulo">Deixe sua comunidade segura de um jeito fácil</h2>
                 <button class="principal-seção1-botão">Me adicione</button>
             </div>
-            <img class="principal-seção1-imagem" src="ballebot.svg" alt="Imagem da Balle Bot">
+            <img class="principal-seção1-imagem" src="Imagens/ballebot.svg" alt="Imagem da Balle Bot">
         </section>
         <section class="principal-seção2">
             <h3 class="principal-seção2-subtítulo">O que ela faz por você?</h3>
@@ -51,7 +51,7 @@
 
     <footer class="rodapé">
         <!-- Essa tag será para marcar as informações do rodapé da página -->
-        <img class="rodapé-imagem" src="ballerini.svg">
+        <img class="rodapé-imagem" src="/Imagens/ballerini.svg">
     </footer>
 </body>
 </html>
